--- a/index.html
+++ b/index.html
@@ -665,7 +665,7 @@
 
     // ✅ Hardcoded fallback packages (so IND works even if your lookup section isn't detected)
     const defaultPackages = {
-      "IND": "BMW Individual (Paint/Order)",
+      "IND": "BMW Individual (Paint/Order) — $5,000.00",
       // Add more if you want:
       // "ZCP": "Competition Package",
       // "ZCV": "Convenience Package",
