--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- ✅ HIDDEN TAB TITLE (no "2011 E90 M3 Database" in browser tab) -->
-  <title></title>
+  <title>>2011 E90 M3 Sedan Database</title>
 
   <!-- ✅ ANIMATED FAVICON (keep as-is) -->
   <link
