--- a/index.html
+++ b/index.html
@@ -662,7 +662,8 @@
       "NCH4": { image: "https://github.com/Sman19/E9x-Interiors/raw/c588c491108fbe4764bc1ff8c49809dc0991fa32/Black%3APadllaium%20Two-TOne.png", description: "Palladium/Black Novillo Leather (Two-Tone)" },
       "NCH5": { image: "https://github.com/Sman19/E9x-Interiors/raw/c588c491108fbe4764bc1ff8c49809dc0991fa32/Two-Tone%20Fox%20Red%3ABlack%3ABlck.png", description: "Fox Red/Black Novillo Leather (Two-Tone)" },
       "NDH5": { image: "https://github.com/Sman19/E9x-Interiors/raw/c588c491108fbe4764bc1ff8c49809dc0991fa32/Two-Tone%20Fox%20Red%3ABlack%3ABlck.png", description: "Fox Red/Black Extended Novillo Leather (Two-Tone)" },
-      "FOX RED": { image: "https://github.com/Sman19/E9x-Interiors/raw/c588c491108fbe4764bc1ff8c49809dc0991fa32/Fox%20Red%20Novillo%20Leather.png", description: "Fox Red Extended Novillo Leather" }
+      "FOX RED": { image: "https://github.com/Sman19/E9x-Interiors/raw/c588c491108fbe4764bc1ff8c49809dc0991fa32/Fox%20Red%20Novillo%20Leather.png", description: "Fox Red Extended Novillo Leather" },
+      "Z1XX.1": { image: "https://github.com/Sman19/E9x-Interiors/raw/8563d8f05179279b39bf1923f4a2b6ef385bbb2e/Z1XX.1%20Amarone%20.png", description: "Amarone Ext. Novillo Leather" }
     };
 
     // ✅ Hardcoded fallback packages (so IND works even if your lookup section isn't detected)
